--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,23 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend/:/backend/
-    command: uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: uvicorn app.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
     env_file:
       - ./backend/.env
     ports:
       - 8000:8000
-    depends_on:
-      - db
+#    depends_on:
+#      - db
 
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./backend/.env
-    ports:
-      - 5432:5432
-
-  volumes:
-    postgres_data:
+#  db:
+#    image: postgres:13
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
+#    env_file:
+#      - ./backend/.env
+#    ports:
+#      - 5432:5432
+#
+#  volumes:
+#    postgres_data:
 
