--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,17 @@ services:
       - ./backend/.env
     ports:
       - 8000:8000
-#    depends_on:
-#      - db
+    depends_on:
+      - database
 
-#  db:
-#    image: postgres:13
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data/
-#    env_file:
-#      - ./backend/.env
-#    ports:
-#      - 5432:5432
-#
-#  volumes:
-#    postgres_data:
+  database:
+    image: postgres:13
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./backend/.database.env
+    ports:
+      - 5432:5432
 
+volumes:
+  postgres_data:
